# rokoko

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  bench_rokoko_log.txt  build.rs  cargo_wrapper.sh  run_sage_estimator.sh  sage_sis_estimator.py  test_const.rs
.cargo/: config.toml
benches/: bench.rs  comparison_ckks.md  cyclo_bench.rs  eltwise_bench.rs  rokoko_bench.rs
docs/: lessons-and-pitfalls.md  project-overview.md
experiments/sapphire_rapids/: rokoko_2_30  salsaa_2_26  salsaa_2_28  salsaa_2_30  test_greyhound_2_28  test_greyhound_2_30
experiments/tiger_lake/: rokoko_2_26  rokoko_2_28  rokoko_2_30  salsaa_2_26  salsaa_2_28  test_greyhound_2_26  test_greyhound_2_28
hexl-bindings/: hexl_wrapper.cpp  hexl_wrapper_alt.cpp
hexl-bindings/hexl-rust/: Cargo.toml  LICENSE  README.md
hexl-bindings/hexl-rust/examples/: demo.rs
hexl-bindings/hexl-rust/src/: aligned_vec.rs  avx512_util.rs  cpu_features.rs  eltwise.rs  lib.rs  ntt.rs  ntt_avx512_util.rs  number_theory.rs  util.rs
hexl-bindings/hexl-rust/tests/: integration_tests.rs
hexl-bindings/incomplete-rexl/: README.md
incomplete-rexl/: Cargo.toml  LICENSE  README.md
incomplete-rexl/examples/: demo.rs
incomplete-rexl/src/: aligned_vec.rs  avx512_util.rs  cpu_features.rs  eltwise.rs  lib.rs  ntt.rs  ntt_avx512_util.rs  number_theory.rs  util.rs
incomplete-rexl/tests/: integration_tests.rs
src/: hexl_benches.rs  lib.rs  main.rs
src/common/: arithmetic.rs  config.rs  decomposition.rs  estimator.rs  hash.rs  matrix.rs  mod.rs  norms.rs  pool.rs  power_series.rs  projection_matrix.rs  ring_arithmetic.rs  sampling.rs  structured_row.rs  sumcheck_element.rs  witness.rs
src/hexl/: bindings.rs
src/protocol/: commitment.rs  config.rs  config_generator.rs  crs.rs  execution.rs  execution_simple.rs  fold.rs  mod.rs  open.rs  params.rs  prefix.rs  project.rs  project_2.rs  sumcheck.rs  vdf.rs
src/protocol/parties/: commiter.rs  executor.rs  mod.rs  prover.rs  verifier.rs
src/protocol/sumcheck/: common.rs  diff.rs  hypercube_point.rs  linear.rs  mod.rs  polynomial.rs  product.rs  ring_to_field_combiner.rs  selector_eq.rs
src/protocol/sumcheck_utils/: combiner.rs  common.rs  diff.rs  elephant_cell.rs  hypercube_point.rs  linear.rs  mod.rs  polynomial.rs  product.rs  ring_to_field_combiner.rs  selector_eq.rs  sum.rs
src/protocol/sumchecks/: builder.rs  builder_verifier.rs  context.rs  context_verifier.rs  helpers.rs  loader.rs  loader_verifier.rs  mod.rs  runner.rs  runner_verifier.rs
src/salsaa/: executor.rs  mod.rs
src/subroutines/: crs.rs
