[package]
name = "rokoko"
version = "0.1.0"
edition = "2021"

[features]
# Use the pure-Rust HEXL replacement (incomplete-rexl) with AVX-512 kernels.
# When disabled, falls back to C++ Intel HEXL via FFI (requires libhexl_wrapper.so).
incomplete-rexl = ["dep:incomplete-rexl"]
# Link the pre-built Cyclo static libraries for the cyclo_bench benchmark.
# Requires `zig build` to have been run in ../VELA/libVELA/cyclo/.
cyclo = []
# Enables zero-cost borrow checking by using UnsafeCell instead of RefCell
# WARNING: Only safe if mutations never overlap with reads
unsafe-sumcheck = []
debug-hardness = []
debug-decomp = []
p-30 = []
p-26 = []
p-28 = []

[dependencies]
criterion = "0.7.0"
num = "0.4.3"
rand = "0.9.2"
blake3 = "1.5.1"
rayon = "1.10"
incomplete-rexl = { path = "incomplete-rexl", optional = true }
libloading = "0.8.6"

[profile.release]
opt-level = 3
debug = false
lto = "fat"           # Full link-time optimization
codegen-units = 1     # Better optimization at cost of compile time
panic = "abort"       # Smaller binaries, slightly faster

[profile.dev]
opt-level = 3

[profile.bench]
opt-level = 3
debug = false
overflow-checks = false
lto = "thin"   # fat LTO breaks when linking C/Zig static libs (no LLVM bitcode)
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "eltwise_bench"
harness = false
required-features = ["incomplete-rexl"]

[[bench]]
name = "cyclo_bench"
harness = false
required-features = ["cyclo"]

[[bench]]
name = "rokoko_bench"
harness = false
