[package]
name = "incomplete-rexl"
version = "0.1.0"
edition = "2021"
# Requires Rust nightly (uses #![feature(target_feature_inline_always)])
description = "Pure-Rust modular arithmetic and NTT library with AVX-512 acceleration"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ntt", "modular-arithmetic", "avx512", "fhe", "polynomial"]
categories = ["cryptography", "mathematics"]

[dependencies]
rand = "0.9.2"
